--- a/angular.json
+++ b/angular.json
@@ -128,6 +128,10 @@
               "devServerTarget": "projet-angular-garenaux:serve:production"
             }
           }
+        },
+        "deploy": {
+          "builder": "@angular/fire:deploy",
+          "options": {}
         }
       }
     }
